apmanager (1.0.3) hardy; urgency=low

  * Include a reporting interface

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Thu, 25 Sep 2008 10:21:32 -0400

apmanager (1.0.2) hardy; urgency=low

  * Make the daemon multithreaded for concurrent task execution

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Fri, 19 Sep 2008 11:30:51 -0400

apmanager (1.0.1) hardy; urgency=low

  [ Vincent vinet ] 
  * Fix default apache2 config
  * Fix init.d script
  * Fix SCP command used to run remote commands
  * Add Refreshing pages, and fix AP refresh fail

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Thu, 18 Sep 2008 16:22:11 -0400

apmanager (1.0.0) hardy; urgency=low

  *  Release Initial

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Mon, 15 Sep 2008 15:22:26 -0400

apmanager (0.0.1-1) unstable; urgency=low

  * Initial release 

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Fri, 12 Sep 2008 11:13:01 -0400
