@@ -1,0 +1,1 @@
+<a href='{% url apmanager.genericsql.views.display_report_list %}'>Rapports</a><br />
