@@ -3,6 +3,6 @@
 {% block feuillestyle %}{% endblock %}
 {% block menu %}{% endblock %}
 
-{% block body %}<h3>Erreur de programmation</h3><p>Cette erreur peut provenir d'une requ&ecirc;te SQL mal form&eacute;e ou de param&egrave;tres incorrects</p><p>{{ exception }}</p>{% endblock %}
+{% block body %}<h3>Erreur de programmation</h3><p>Cette erreur peut provenir d'une requ&ecirc;te SQL mal form&eacute;e ou de param&egrave;tres incorrects</p><p>{{ exception }}</p><br>{% endblock %}
 
 {% block body_public %}{% endblock %}
