@@ -40,5 +40,5 @@
 {% if allow_sort %}<div id="sortdiv" class=" sortbar"></div>{% endif %}
 {% include "genericsql/report_data.inc.html" %}
 {% endblock %}
-
+{% block admin %}{% endblock %}
 {% block body_public %}{% endblock %}
