@@ -9,5 +9,7 @@
     {% endfor %}
     </ul>
 {% endif %}
+{% endblock %}
+{% block admin %}
 <a href="{% url django.contrib.admin.views.main.index %}multireport/multireport/">Gestion des rapports</a>
 {% endblock %}
