@@ -30,6 +30,8 @@
 {{ sreport.html }}
 
 {% endfor %}
+{% endblock %}
+{% block admin %}
 
 {% if not printable %}
 {% if report.owner %}
